fixed a text overflow issue.

--- a/src/Components/Note/styles.css
+++ b/src/Components/Note/styles.css
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  overflow: hidden;
 }
 .Container__Header {
   font-size: 2rem;
